--- a/style.css
+++ b/style.css
@@ -24,8 +24,9 @@ body {
 }
 
 .player {
-  max-width: 80vw;
-  min-width: 800px;
+  max-width: 1000px;
+  /* min-width: 800px; */
+  width: 80vw;
   border: 5px solid black;
   border-radius: 10px;
   background: black;
@@ -35,18 +36,20 @@ body {
 
 video {
   border-radius: 5px;
-
+  width: 100%;
 }
 
 /* Containers */
 .show-controls {
   width: 100%;
   height: 30%;
-  background: dodgerblue;
   z-index: 2;
   position: absolute;
   bottom: 0;
   cursor: default;
+  /*opacity: 0;
+  */ /*visibility: hidden;
+  */
 }
 
 .controls-container {
@@ -60,10 +63,22 @@ video {
   z-index: 5;
   display: flex;
   justify-content: space-between;
-
+  opacity: 0;
+  transition: all 0.5s ease-out 2s;
+  -webkit-transition: all 0.5s ease-out 2s;
+  -moz-transition: all 0.5s ease-out 2s;
+  -ms-transition: all 0.5s ease-out 2s;
+  -o-transition: all 0.5s ease-out 2s;
 }
 
-
+.show-controls:hover .controls-container {
+  opacity: 1;
+  transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -ms-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+}
 
 .control-group {
   width: 100%;
@@ -83,26 +98,33 @@ video {
 
 /* Progress Bar */
 .progress-range {
-
   margin: auto;
   border-radius: 10px;
   position: absolute;
   left: 15px;
+  right: 15px;
   top: 15px;
   cursor: pointer;
-
+  height: 8px;
+  background-color: rgb(101, 101, 101);
+  transition: height 0.1s ease-in-out;
+  -webkit-transition: height 0.1s ease-in-out;
+  -moz-transition: height 0.1s ease-in-out;
+  -ms-transition: height 0.1s ease-in-out;
+  -o-transition: height 0.1s ease-in-out;
 }
-
-
 
 .progress-bar {
   background: var(--primary-color);
-  width: 50%;
+  width: 0;
   height: 100%;
   border-radius: 10px;
   transition: all 0.5s ease;
+  /* cursor: pointer; */
 }
-
+.progress-range:hover {
+  height: 10px;
+}
 /* Left Controls -------------------------- */
 
 .controls-left {
@@ -165,20 +187,22 @@ video {
 .speed {
   margin-right: 15px;
 }
-
-
-
+select,
+option {
+  cursor: pointer;
+}
 select {
-
   color: var(--font-color);
+  background-color: transparent;
+  appearance: none;
+  /* text-align: center; */
   border: none;
+  outline: none;
   font-size: 18px;
   position: relative;
   top: -2.5px;
   border-radius: 5px;
 }
-
-
 
 select > option {
   background: rgba(0, 0, 0, 0.9);
@@ -207,8 +231,9 @@ select > option {
 
 /* Media Query: Large Smartphone (Vertical) */
 @media screen and (max-width: 600px) {
-
-
+  .player {
+    width: 95vw;
+  }
   .fas {
     font-size: 20px;
   }
@@ -227,6 +252,7 @@ select > option {
     top: 0;
     left: 0;
     border-radius: 0;
+    z-index: 20;
   }
 
   .progress-bar {
